# IO-2026S

./: .gitignore  Common due date scheduling.html  PROBLEM.md  README.md  generate_uml.py  main.py  pyproject.toml  render_interactions.py  setup.py
prompts/: default_reflection.txt  ga_reflection.txt  sa_reflection.txt
prompts/caveman-compression/: caveman_compress.py
sanity/: sanity_agent.py  sanity_benchmark.py  sanity_classical_agents.py  sanity_sch_env.py
src/: __init__.py  agent.py  benchmark.py  classical_agents.py  configs.py  gepa_agent.py  gepa_base.py  orlib_sch.py  rl_dqn.py  rl_nets.py  rl_ppo.py  sch_env.py  sch_rl.py  visualize.py
src/native_optimized/: __init__.py  crossover_opt.c  evaluate_opt.c  evaluate_simd.c  optimized.c  optimized_core.c
